# minecraft-mod-cli

./: .gitignore  CMakeLists.txt  CliParser.cpp  CliParser.h  CommandHandlers.cpp  CommandHandlers.h  CurseForgeAPI.cpp  CurseForgeAPI.h  FileInfo.cpp  FileInfo.h  FileScanner.cpp  FileScanner.h  Main.cpp  ModDependency.cpp  ModDependency.h  ModVersionInfo.cpp  ModVersionInfo.h  ModrinthAPI.cpp  ModrinthAPI.h  OutputFormatter.cpp  OutputFormatter.h  README.md  UpdateEngine.cpp  UpdateEngine.h  UpdateState.cpp  UpdateState.h  build.sh
